Read XML assertion and validate signature